# scalable-agent-framework

./: .cursorignore  .gitignore  INSTALL.md  Makefile  README.md  TODO.md  docker-compose-java.yml  docker-compose-python.yml  docker-compose.override.yml  docker-compose.yml  pom.xml  pyproject.toml  requirements.txt  setup.sh
.kiro/specs/agent-graph-composer/: design.md  requirements.md  tasks.md
.kiro/specs/graph-bundle-upload/: design.md  requirements.md  tasks.md
docs/: AgentSpecification.md  DEPLOYMENT.md  DataFlow.md  JavaDataFlow.md  TENANT_AWARE_KAFKA.md  TENANT_AWARE_KAFKA_EXAMPLE.md  observations.md
docs/gen-plans/: Cursor-initial-impl.md  Traycer-intial-impl.md
docs/gen-plans/traycer-chats/: 01-intial.md  02-cursor_implementing_protobuf_idl_and_py.md  03-cursor_update_import_paths_in_proto_fil.md  04-cursor_update_import_statements_in_serv.md  05-cursor_make_methods_abstract_in_base_cl.md  06-cursor_update_proto_paths_and_imports_i.md  07-cursor_add_error_handling_to_taskresult.md  08-cursor_enhance_graph_validation_and_cyc.md
docs/prompts/: prompt-08-20-2025.md
proto/: common.proto  plan.proto  services.proto  task.proto
protos/: buf.gen.yaml  buf.yaml  common.proto  plan.proto  services.proto  task.proto
scripts/: activate_uv.sh  build_java_microservices.sh  build_microservices.sh  gen_proto.sh  git_retro_committer.py
services/admin-java/: Dockerfile  pom.xml
services/common-java/: pom.xml
services/common-py/: README.md  pyproject.toml  test_protobuf_consistency.py
services/common-py/agentic_common/: __init__.py  health.py  kafka_utils.py  logging_config.py  pb_utils.py
services/common-py/agentic_common/pb/: __init__.py  common_pb2.py  plan_pb2.py  task_pb2.py
services/common-py/scripts/: gen_proto.sh
services/common-py/tests/: test_pb_construction.py
services/control-plane/: Dockerfile  __init__.py  execution_controller.py  graph_orchestrator.py  guardrail_engine.py  pom.xml
services/control_plane-java/: Dockerfile  pom.xml
services/control_plane-py/: Dockerfile  main.py  pyproject.toml
services/control_plane-py/control_plane/: __init__.py  api.py  guardrails.py  kafka_consumer.py  kafka_producer.py  router.py  service.py
services/control_plane-py/policies/: default.yaml
services/data-plane/: Dockerfile  __init__.py  blob_store.py  event_bus.py  pom.xml  state_store.py
services/data_plane-java/: Dockerfile  pom.xml
services/data_plane-py/: alembic.ini  main.py  pyproject.toml
services/data_plane-py/alembic/: env.py
services/data_plane-py/data_plane/: __init__.py  api.py  database.py  kafka_consumer.py  kafka_producer.py  models.py  service.py
services/executor-py/: main.py
services/executor-py/executor/: __init__.py  service.py
services/executor_old-py/: Dockerfile  main.py  pyproject.toml
services/executor_old-py/executor/: api.py  kafka_consumer.py  kafka_producer.py  plan_executor.py  registry.py  service.py  task_executor.py
services/executors-py/: Dockerfile  README.md  main.py  pyproject.toml
services/executors-py/executors/: __init__.py  base_execution_producer.py  base_executor.py  base_input_consumer.py  plan_executor.py  plan_kafka_consumer.py  plan_kafka_producer.py  service.py  task_executor.py  task_kafka_consumer.py  task_kafka_producer.py
services/executors-py/tests/: __init__.py  conftest.py  mock_utils.py  test_plan_executor_integration.py  test_plan_flow.py  test_protobuf_utils.py  test_service_integration.py  test_task_executor_integration.py  test_task_flow.py
services/executors-py/tests/fixtures/: sample_plan.py  sample_task.py
services/frontend/: .dockerignore  Dockerfile.dev  package-lock.json  package.json  vite.config.ts
services/frontend/docs/: client-side-validation.md
services/frontend/src/: App.css  App.tsx  index.css
services/frontend/src/__tests__/: App.test.tsx
services/frontend/src/api/: client.ts
services/frontend/src/context/: AppContext.tsx  ErrorContext.tsx  context.ts
services/frontend/src/hooks/: useApiError.ts  useAppContext.ts  useGraphs.ts  useNodeOperations.ts  (+2 more)
services/graph-builder/: Dockerfile  pom.xml
services/graph-composer/: Dockerfile  pom.xml
services/graph_builder-java/: Dockerfile  pom.xml
services/graph_composer/: pom.xml
services/integration_tests-java/: README.md  pom.xml
services/plan_executor-java/: Dockerfile  pom.xml
services/standalone-py/: .gitignore  Dockerfile  LOGGING_AND_HEALTH.md  README_STANDALONE.md  __init__.py  activate_uv.sh  agent_graph.py  agent_lifetime.py  duration.py  edge.py  edge_configuration.py  example_logging_demo.py  graph_metadata.py  graph_node.py  join_configuration.py  plan.py  plan_configuration.py  pyproject.toml  routing_rule.py  task.py  task_configuration.py  test_graph_validation.py  test_standalone_integration.py  timestamp.py
services/standalone-py/agentic/: __init__.py  standalone_main.py
services/standalone-py/agentic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
services/standalone-py/agentic/control_plane/: __init__.py  server.py  service.py
services/standalone-py/agentic/core/: __init__.py  edge.py  graph.py  health.py  http_health.py  lifetime.py  logging.py  plan.py  task.py
services/standalone-py/agentic/data_plane/: __init__.py  server.py  service.py
services/standalone-py/agentic/executors/: __init__.py  plan_executor.py  task_executor.py
services/standalone-py/agentic/message_bus/: __init__.py  broker.py
services/standalone-py/agentic/pb/: __init__.py  common_pb2.py  plan_pb2.py  plan_pb2_grpc.py  services_pb2.py  services_pb2_grpc.py  task_pb2_grpc.py
services/standalone-py/agentic/pb/io_arl/: __init__.py
services/standalone-py/agentic/pb/io_arl/proto/: __init__.py
services/standalone-py/agentic/pb/io_arl/proto/model/: __init__.py
services/standalone-py/agentic/pb/proto/: common_pb2.py  common_pb2_grpc.py
services/standalone-py/scalable_agent_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/task_executor-java/: Dockerfile  pom.xml
temp/1/: task.py
temp/2/: task.py
temp/2xxx/: plan.py
temp/xxx1/: plan.py
(+336 files in other folders)
