[project]
name = "scalable-agent-framework"
version = "0.1.0"
description = "A scalable agent framework with protobuf-based communication"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "grpcio-tools>=1.74.0",
    "protobuf>=6.31.1",
    "grpcio>=1.74.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["services/standalone-py"]

[tool.setuptools.package-dir]
"" = "services/standalone-py" 