[project]
name = "scalable-agent-framework"
version = "0.1.0"
description = "A scalable agent framework with protobuf-based communication"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "grpcio==1.74.0",
    "grpcio-tools==1.74.0",
    "protobuf==6.31.1",
    "pydantic==2.7.3",
    "aiohttp==3.9.5",
    "structlog==24.1.0",
    "asyncio-mqtt==0.16.2",
    "aiofiles==24.1.0",
    "click==8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "black==24.7.0",
    "isort==5.13.2",
    "flake8==7.0.0",
    "mypy==1.11.0",
    "pre-commit==3.8.0",
]
test = [
    "pytest==8.2.2",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
]
docs = [
    "sphinx==8.0.2",
    "sphinx-rtd-theme==2.0.0",
    "myst-parser==3.0.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["services/standalone-py"]

[tool.setuptools.package-dir]
"" = "services/standalone-py"

[tool.uv]
python = "3.13.5" 